# rust

./: .gitignore  Cargo.toml  README.md  Rustlings.code-workspace
.github/workflows/: codeql-analysis.yml
C/: .gitignore  tasks.json  test.c
C/Understanding pointers/: pointers  pointers.c  sizeofint  sizeofint.c
Leetcode/: two_sum_problem.rs
Rustlings/: strings.rs
go-guestbook-1/: skaffold.yaml
go-guestbook-1/kubernetes-manifests/: guestbook-backend.deployment.yaml  guestbook-backend.service.yaml  guestbook-frontend.deployment.yaml  guestbook-frontend.service.yaml  guestbook-mongodb.deployment.yaml  guestbook-mongodb.service.yaml
go-guestbook-1/src/backend/: Dockerfile  database.go  go.sum  main.go  mongodb.go
go-guestbook-1/src/frontend/: Dockerfile  main.go
go-guestbook-1/src/frontend/static/: style.css
go-guestbook-1/src/frontend/templates/: home.tpl
go-hello-world-1/: .gitignore  Dockerfile  README.md  skaffold.yaml
go-hello-world-1/cmd/hello-world/: main.go
go-hello-world-1/kubernetes-manifests/: hello.deployment.yaml  hello.service.yaml
golang/go-guestbook-1/src/backend/: go.mod
golang/go-guestbook-1/src/frontend/: main.go
golang/go-guestbook-1/src/frontend/templates/: home.tpl
golang/go-hello-world-1/: skaffold.yaml
golang/go-hello-world-1/cmd/hello-world/: main.go
python/: 3b1b mandalorian testing.py  parsing.py
rust/: reptillesson1.rs
rust/Leetcode/: two_sum_problem_comments.rs
rust/Rustlings/: .gitignore  Cargo.toml
rust/Rustlings/rustlings/src/: strings.rs  tests.rs
