[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "rustlings/src/main.rs"

[[bin]]
name = "strings"
path = "rustlings/src/strings.rs"

[[bin]]
name = "tests"
path = "rustlings/src/tests.rs"